--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,5 +38,5 @@ for:
   - set PATH=C:\Program Files\OpenCppCoverage;%PATH%
   after_build:
   - cd build
-  - OpenCppCoverage.exe --sources src --sources tests --export_type cobertura:coverage.xml --modules "*.exe" --cover_children -- %configuration%/minimalcpppj.exe -C %configuration% --output-on-failure
+  - OpenCppCoverage.exe --sources src --sources tests --export_type cobertura:coverage.xml --modules "*.exe" --cover_children -- %configuration%/gfxminimath.exe -C %configuration% --output-on-failure
   - codecov -f coverage.xml --root %APPVEYOR_BUILD_FOLDER%
