--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,32 @@ project(gfxminimath
 
 include(cmake/CPM.cmake)
 CPMAddPackage("gh:onqtam/doctest#2.4.6")
+CPMAddPackage(
+  NAME vcl
+  GITHUB_REPOSITORY "vectorclass/version2"
+  VERSION 2.02.00
+  DOWNLOAD_ONLY yes
+)
+CPMAddPackage(
+  NAME vcladdon
+  GITHUB_REPOSITORY "vectorclass/add-on"
+  GIT_TAG "a48a87517f1a6abad67e4231d22a84849075aab7"
+  DOWNLOAD_ONLY yes
+)
 
-option(BUILD_WITH_TEST "build project with tests" OFF)
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   add_executable(${CMAKE_PROJECT_NAME})
-  if (BUILD_WITH_TEST)
-	  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BUILD_WITH_TEST DOCTEST_CONFIG_SUPER_FAST_ASSERTS)
-	  target_include_directories(${CMAKE_PROJECT_NAME} SYSTEM PUBLIC "${doctest_SOURCE_DIR}")
-	  add_subdirectory(tests)
-  else()
-	  add_subdirectory(app)
-  endif()
+  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BUILD_WITH_TEST DOCTEST_CONFIG_SUPER_FAST_ASSERTS)
+  target_include_directories(${CMAKE_PROJECT_NAME} SYSTEM PUBLIC "${doctest_SOURCE_DIR}")
+  add_subdirectory(tests)
 else()
   add_library(${CMAKE_PROJECT_NAME})
 endif()
+
+target_include_directories(${CMAKE_PROJECT_NAME} SYSTEM PUBLIC
+  "${vcl_SOURCE_DIR}"
+  "${vcladdon_SOURCE_DIR}"
+)
 
 target_compile_features(${CMAKE_PROJECT_NAME} PUBLIC cxx_std_20)
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE
@@ -35,3 +47,5 @@ target_include_directories(${CMAKE_PROJECT_NAME}
   "include"
 )
 add_subdirectory(src)
+
+#cmake -S . -B build/clang13 -G Ninja -DCMAKE_C_COMPILER=clang-13 -DCMAKE_CXX_COMPILER=clang++-13 -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCPM_SOURCE_CACHE=~/dev/.cache/CPM -DCMAKE_CXX_FLAGS="-m64 -mavx2"
