--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,38 +20,38 @@ CPMAddPackage(
 )
 
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
-  add_executable(${CMAKE_PROJECT_NAME})
+  add_executable(${PROJECT_NAME})
   CPMAddPackage("gh:onqtam/doctest#2.4.6")
-  target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE BUILD_WITH_TEST DOCTEST_CONFIG_SUPER_FAST_ASSERTS)
-  target_include_directories(${CMAKE_PROJECT_NAME} SYSTEM PUBLIC "${doctest_SOURCE_DIR}")
+  target_compile_definitions(${PROJECT_NAME} PRIVATE BUILD_WITH_TEST DOCTEST_CONFIG_SUPER_FAST_ASSERTS)
+  target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC "${doctest_SOURCE_DIR}")
   add_subdirectory(src)
   add_subdirectory(tests)
 else()
-  add_library(${CMAKE_PROJECT_NAME})
+  add_library(${PROJECT_NAME})
 endif()
 
-target_include_directories(${CMAKE_PROJECT_NAME} SYSTEM PUBLIC
+target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC
   "${vcl_SOURCE_DIR}"
   "${vcladdon_SOURCE_DIR}"
 )
 
-target_compile_features(${CMAKE_PROJECT_NAME} PUBLIC cxx_std_20)
-target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
+target_compile_options(${PROJECT_NAME} PRIVATE
   $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra -Wpedantic>
   $<$<CXX_COMPILER_ID:Clang>:-Weverything -Wno-c++98-c++11-c++14-compat -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-c++20-compat>
   $<$<CXX_COMPILER_ID:MSVC>:/W4 /MP>
 )
 
-target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE
+target_compile_definitions(${PROJECT_NAME} PRIVATE
   $<$<CXX_COMPILER_ID:MSVC>:NOMINMAX>
   VCL_NAMESPACE=vcl
   _USE_MATH_DEFINES
 )
-target_include_directories(${CMAKE_PROJECT_NAME}
+target_include_directories(${PROJECT_NAME}
   PUBLIC
   "include"
 )
-target_precompile_headers(${CMAKE_PROJECT_NAME}
+target_precompile_headers(${PROJECT_NAME}
   PUBLIC
   <cmath>
   "${vcl_SOURCE_DIR}/vectorclass.h"
